# CMake-Conan-OpenGL-Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
src/: main.cpp
